--- a/css/common.css
+++ b/css/common.css
@@ -1,141 +1,164 @@
 @import url('https://fonts.cdnfonts.com/css/lato');
 @import url('https://fonts.cdnfonts.com/css/cocogoose');
+
 :root {
-    --darkColor: #272A31;
-    --lightDarkColor: #3C3F46;
-    --primaryColor: #EC5242;
-    --grayColor: #D3D3D3;
-    --lightGrayColor: #F9F9F9;
+  --darkColor: #272a31;
+  --lightDarkColor: #3c3f46;
+  --primaryColor: #ec5242;
+  --grayColor: #d3d3d3;
+  --lightGrayColor: #f9f9f9;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
+
 .app-moto {
-    font-family:'Lato', 'COCOGOOSE';
-    color: var(--darkColor);
-    font-weight: 900;
+  font-family: 'Lato', 'COCOGOOSE', sans-serif;
+  color: var(--darkColor);
+  font-weight: 900;
 }
+
 .app-sub-moto {
-    font-family: 'Lato',sans-serif;
-    margin-top: 20px;
+  font-family: 'Lato', sans-serif;
+  margin-top: 20px;
 }
+
 .social-links {
   list-style: none;
   display: flex;
   gap: 15px;
   text-align: end;
 }
+
 .social-link-list {
-    display: block;
-    float: right;
+  display: block;
+  float: right;
 }
+
 .social-link-list img {
-    width: 15px;
-    height: 15px;
+  width: 15px;
+  height: 15px;
 }
+
 .home-section {
-    /* background-image: url('../assets/images/handyman.jpg'); */
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
+  /* background-image: url('../assets/images/handyman.jpg'); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
+
 .home-section-overlay {
-    background: var(--lightGrayColor);
-    width: 100%;
-    height: 100vh;
-    /* opacity: 0.8; */
-    padding: 20px;
+  background: var(--lightGrayColor);
+  width: 100%;
+  height: 100vh;
+
+  /* opacity: 0.8; */
+  padding: 20px;
 }
 
 .search-task-card {
-    background: #fff;
-    text-align: center;
-    padding: 60px 30px 30px;
-    border-radius: 5px;
+  background: #fff;
+  text-align: center;
+  padding: 60px 30px 30px;
+  border-radius: 5px;
 }
+
 .search-task-form {
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    justify-content: center;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
 }
+
 .search-task-form-input {
-    height: 30px;
-    font-size: 18px;
-    padding: 20px 15px;
-    border: 1px solid var(--grayColor);
-    font-family: 'Lato',sans-serif;
-    flex: 1;
+  height: 30px;
+  font-size: 18px;
+  padding: 20px 15px;
+  border: 1px solid var(--grayColor);
+  font-family: 'Lato', sans-serif;
+  flex: 1;
 }
+
 .search-task-form-btn {
   background: var(--primaryColor);
   color: #fff;
   font-family: 'Lato', sans-serif;
   font-weight: 900;
-  border: none; 
+  border: none;
   height: 100%;
   padding: 13px 20px;
 }
+
 .home-section-info {
-    margin-top: 20px;
-    padding: 5px;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    gap: 40px;
+  margin-top: 20px;
+  padding: 5px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .home-section-features {
-    list-style: none;
+  list-style: none;
 }
-.home-section-features li{
-    display: flex;
-    gap: 20px;
-    align-items: center;
+
+.home-section-features li {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
+
 .home-section-features li img {
-    color: var(--primaryColor);
+  color: var(--primaryColor);
 }
+
 .home-section-info-container {
-    background-color: var(--lightGrayColor);
-    padding: 20px;
-    color: var(--darkColor);
+  background-color: var(--lightGrayColor);
+  padding: 20px;
+  color: var(--darkColor);
 }
+
 .recent-works {
-  background-color: var(--darkColor);;
+  background-color: var(--darkColor);
   background-image: url('../assets/images/pattern_bg.png');
   padding: 40px 20px;
   color: #fff;
 }
+
 .text-center {
-    text-align: center;
+  text-align: center;
 }
+
 .underline-center::after {
   content: '';
   display: block;
-  margin-top: 70px;
   width: 40px;
   border-bottom: 5px solid var(--primaryColor);
-  margin: 10px auto 0px;
+  margin: 10px auto 0;
 }
+
 .recent-works-container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
+
 .work {
-    background-color: rgba(180, 180, 180, 0.1);
-    padding: 20px;
-    /* background-image: url('../assets/images/pattern_bg.png'); */
+  background-color: rgba(180, 180, 180, 0.1);
+  padding: 20px;
+
+  /* background-image: url('../assets/images/pattern_bg.png'); */
 }
+
 .work-title {
-    color: var(--primaryColor);
-    font-size: 1.4rem;
-    font-weight: bold;
+  color: var(--primaryColor);
+  font-size: 1.4rem;
+  font-weight: bold;
 }
+
 .work-btn {
   display: block;
   margin: 40px auto 20px;
