--- a/css/common.css
+++ b/css/common.css
@@ -44,31 +44,26 @@
 }
 
 .home-section {
-  /* background-image: url('../assets/images/handyman.jpg'); */
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: var(--grayColor);
   width: 100%;
-  height: 100vh;
+  padding: 0 0 40px;
 }
 
 .home-section-overlay {
-  background: var(--lightGrayColor);
+  background: var(--grayColor);
   width: 100%;
-  height: 100vh;
-
-  /* opacity: 0.8; */
-  padding: 20px;
+  padding: 20px 20px 40px;
 }
 
 .search-task-card {
   background: #fff;
   text-align: center;
-  padding: 60px 30px 30px;
+  padding: 60px 30px 40px;
   border-radius: 5px;
 }
 
 .search-task-form {
-  margin-top: 20px;
+  margin-top: 30px;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -96,15 +91,37 @@
 
 .home-section-info {
   margin-top: 20px;
-  padding: 5px;
   background-color: #fff;
   display: flex;
   align-items: center;
   gap: 40px;
+  justify-content: space-evenly;
+}
+
+.home-section-info-container {
+  background-color: var(--grayColor);
+  padding: 20px;
+  color: var(--darkColor);
+  font-family: 'Lato', sans-serif;
+}
+
+.home-section-info-container h2 {
+  text-transform: capitalize;
+  color: var(--primaryColor);
+}
+
+.home-section-info-container p {
+  margin-top: 10px;
+  font-size: 16px;
 }
 
 .home-section-features {
   list-style: none;
+  margin-left: 10px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .home-section-features li {
@@ -115,12 +132,6 @@
 
 .home-section-features li img {
   color: var(--primaryColor);
-}
-
-.home-section-info-container {
-  background-color: var(--lightGrayColor);
-  padding: 20px;
-  color: var(--darkColor);
 }
 
 .recent-works {
