--- a/css/common.css
+++ b/css/common.css
@@ -167,8 +167,7 @@
 .work-title {
   font-family: 'Lato',sans-serif;
   color: var(--primaryColor);
-  font-size: 16px;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .work-btn {
@@ -178,4 +177,63 @@
   color: #fff;
   padding: 20px 50px;
   border: none;
+}
+.testimonial {
+  background-color: #fff;
+  padding: 30px 20px;
+}
+.testimonials-container {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 50px;
+}
+.testimonial-title {
+  font-family: 'Lato',sans-serif;
+  text-align: center;
+  color: var(--darkColor);
+  font-weight: 900;
+}
+.testimonial-card {
+  font-family: 'Lato', sans-serif;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 10px;
+}
+.testimonial-card-img {
+  background-image: url('../assets/images/tasker-desktop.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.testimonial-name {
+  color: var(--darkColor);
+  font-weight: 600;
+  text-transform: capitalize;
+}
+.testimonial-task {
+  color: var(--primaryColor);
+  margin-top: 8px;
+}
+.testimonial-task::after {
+  content: '';
+  display: block;
+  width: 30px;
+  margin-top: 15px;
+  border-bottom: 2px solid var(--grayColor);
+}
+.testimonial-comment {
+  color: var(--darkColor);
+  margin-top: 15px;
+}
+.testimonial-more-btn {
+  margin: 60px 0px 20px;
+  padding: 20px 20px;
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--grayColor);
+  background-color: #fff;
+  color: var(--darkColor);
 }
