--- a/css/desktop.css
+++ b/css/desktop.css
@@ -140,4 +140,15 @@
     width: 80%;
     margin: 0 auto;
   }
+  .awards-list {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    width: 70%;
+    margin: 50px auto 0px;
+  }
+  .awards-list li {
+    width: 50%;
+    height: 300px;
+  } 
 }
