--- a/css/common.css
+++ b/css/common.css
@@ -14,7 +14,9 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+.close-menu-icon {
+  display: none;
+}
 .app-moto {
   font-family: 'Lato', 'COCOGOOSE', sans-serif;
   color: var(--darkColor);
