--- a/css/desktop.css
+++ b/css/desktop.css
@@ -15,7 +15,9 @@
     justify-content: space-between;
     box-shadow: 4px 0 8px 2px rgba(0, 0, 0, 0.2);
   }
-
+  .app-sub-moto {
+    width: 70%;
+  }
   .logo-img {
     height: 50px;
   }
@@ -82,7 +84,7 @@
 
   .search-task-card {
     width: 65%;
-    margin: 50px auto 30px;
+    margin: 10px auto 30px;
   }
 
   .recent-works-container {
