linter problems resolved

--- a/css/common.css
+++ b/css/common.css
@@ -301,6 +301,11 @@
   flex-wrap: wrap;
 }
 
+.about-us-footer a {
+  font-weight: bold;
+  color: var(--darkColor);
+}
+
 .partners-list li a {
   text-decoration: none;
 }
@@ -373,6 +378,7 @@
   text-align: center;
   color: #fff;
 }
+
 .about-us-title {
   text-align: center;
   margin-top: 10px;
@@ -380,6 +386,7 @@
   font-weight: 900;
   color: var(--primaryColor);
 }
+
 .about-us-content {
   width: 70%;
   background: #fff;
@@ -389,6 +396,7 @@
   font-weight: 400;
   text-align: center;
 }
+
 .about-us-footer {
   text-align: center;
   font-family: 'Lato', sans-serif;
@@ -399,28 +407,28 @@
   margin-top: 40px;
 }
 
-.about-us-footer a {
-  font-weight: bold;
-  color: var(--darkColor);
-}
 .about-logo-section {
   padding: 50px 20px;
   border-bottom: 2px solid var(--grayColor);
 }
+
 .about-logo {
   text-align: center;
 }
+
 .about-logo-title {
   font-weight: 900;
   font-family: 'Lato', sans-serif;
 }
+
 .about-logo-text {
   margin-top: 20px;
 }
+
 .about-logo-img {
   width: 400px;
   height: 120px;
   border: 1px solid #dfdfdf;
   display: block;
-  margin: 30px auto 0px;
+  margin: 30px auto 0;
 }
