--- a/css/desktop.css
+++ b/css/desktop.css
@@ -157,8 +157,9 @@
     width: 50%;
     height: 300px;
   }
+
   .about-logo {
     width: 70%;
-    margin: 0px auto;
+    margin: 0 auto;
   }
 }
